@@ -2,7 +2,10 @@ DIST makemkv_v1.6.10_bin.tar.gz 5690301 RMD160 4d6abcc30e8c73e74f7131212e9cf50e0
 DIST makemkv_v1.6.10_oss.tar.gz 434907 RMD160 033802eaecff32fdfae304cdfb3536413f115b20 SHA1 2bac0028d5f249b2253651f9c04eecb185043613 SHA256 895576c50435afae47f36f686c76828973034f882cb4e9b9ed5f73f4e0039d3c
 DIST makemkv_v1.6.12_bin.tar.gz 5691404 RMD160 1c39d8669e71998c8f5abed7d45c7867db2a7b18 SHA1 eeeb0d694b83f7e8304c94b32b2f7ead12c51e8c SHA256 e39c75c1262af99b908701eaffe4a6b6a10f33f84390cbf2ac7fb0ab5a7e38ee
 DIST makemkv_v1.6.12_oss.tar.gz 437017 RMD160 964d213d98cce2296e29ceb322407d17544158fd SHA1 b3a8827b094eddc162b7a73ba217771880b0ba49 SHA256 c42664019dcc1d6274960e959cb4b5dcfacf592ba3306b01eec144e5b49b34a9
+DIST makemkv_v1.6.14_bin.tar.gz 5786837 RMD160 f569d8ac164d13b44c0409c72307c702eba03ebf SHA1 ce4a821b4628abe19bbd7e5e493671b377c94773 SHA256 a497e8c1d001399f3348ed0a67232adeba9bc43172c8d63a8a9cd10eadfbe7a9
+DIST makemkv_v1.6.14_oss.tar.gz 437476 RMD160 bad41b2ac95b3517886703eecec0e18926700b4d SHA1 0d0c56a5323fc88daa558b1504af7d930a6d4689 SHA256 fcd1df7f125b8eb8365747dc4326a03631e3fc2c000d978b339a21cc93bddaaf
 EBUILD makemkv-1.6.10.ebuild 1581 RMD160 70fdd8476bd18b3932b0d14545d46680ecd5336b SHA1 53bd284b4f749a43b1ab3550e98817a110f57659 SHA256 ed1eac76287d6df7983477afce7ff32c060b57efd2d0b3cf7e7d58d4c1421ec4
 EBUILD makemkv-1.6.12.ebuild 1580 RMD160 1f87caf62265829403bbf3baab004bc53d2d593e SHA1 90fdcc7bdf1356814482c70a0975b9e704e29b47 SHA256 5b0b7214275acbe4c8037429ca0858e3942c507323376f9318b47bd4a538e5a5
+EBUILD makemkv-1.6.14.ebuild 1580 RMD160 1f87caf62265829403bbf3baab004bc53d2d593e SHA1 90fdcc7bdf1356814482c70a0975b9e704e29b47 SHA256 5b0b7214275acbe4c8037429ca0858e3942c507323376f9318b47bd4a538e5a5
 MISC ChangeLog 652 RMD160 fc29c8a118d141436340a5c52b44eba86a8e0b4b SHA1 acade4440ca4b8322e84ef57384051e851635e3d SHA256 c571f1bf3af8286042515531599124a2b952d6ca0e5c6e543870474a4a1ca41e
 MISC metadata.xml 224 RMD160 71a1b9f875b9de0f7a9f0dd00557874d936c5021 SHA1 2bca68cdbca3845abaaa36497a91b789eb1a89d0 SHA256 98cfdec9b1c16d801783412e122d81d3a42627c9b9595f5f8d0d8bf5ecb33e32
